FieldTooltipPlugin: Fixed that some tooltips was not wrapped.
git-svn-id: http://trac-hacks.org/svn@13336 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/fieldtooltipplugin/0.12/fieldtooltip/htdocs/jquerytools/jquery_tools_tooltip.css
+++ b/fieldtooltipplugin/0.12/fieldtooltip/htdocs/jquerytools/jquery_tools_tooltip.css
@@ -1,7 +1,7 @@
 .tooltip {
 	background: #ffff99;
 	padding: 3px;
-	word-wrap: break-word;
+	white-space: normal;
 	width: 400px;
 	text-align: left;
 	color: #663;
@@ -9,5 +9,5 @@
 .tooltip p {
 	margin: 0;
 	color: black;
-	font-size: 120%;
+	font-size: 12px;
 }
